--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,6 +29,7 @@ jobs:
     runs-on: windows-latest
 
     steps:
+    run: ./setup.ps1
 
     - uses: actions/checkout@v2
     - name: Starting CRD 
